--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -34,7 +34,6 @@ cy:
   new note: "Nodyn newydd "
   share success: "Mae’ch neges wedi ei rannu.  "
   share error: "Mae’n flin gennym, digwyddodd gwall wrth rannu’ch neges. Rhowch gynnig  arni eto. "
-  google plus: "Google +"
   connect to: "Cysylltwch â’ch %{connection} cyfrif"
   deleted connection: "Dilëwyd y cysylltiad â  %{connection}  yn llwyddiannus. "
   deleted connection error: "Mae'n flin gennym digwyddodd gwall wrth ddileu eich cyswllt â %{connection}.   "
@@ -104,11 +103,8 @@ cy:
   live: "Grwpiau / Byw "
   first page: "Y Dudalen Gyntaf"
   last page: "Y Dudalen Olaf "
-  next page: "Y Dudalen Nesaf"
-  previous page: "Y Dudalen Flaenorol "
   invalid username or password: "Cyfrinair enw defnyddiwr annilys. "
   show all bookmarks: "Gweld holl %{total}nodau tudalen  "
-  show all notes: "Gweld%{total} notes"
   recent bookmarks: "Nod tudalen diweddar"
   percentage display: "%{number}%"
   myself: "Fi "
@@ -130,12 +126,17 @@ cy:
       content field: "Cynnwys: "
       reference field: "Cyfeiriad(au):"
       save button: "Cadw "
+    status:
+      private: "Prefat"
+      public: "Cyhoeddus "
+      draft: "Drafft"
     list title: "Nodiadau "
     loading community: "Llwytho nodiadau cymunedol…"
     no community notes: "Doedd dim nodiadau cymunedol yn cyfeirio at adnodau dethol i’w gweld. Er mwyn creu nodyn, dewiswch adnod yn adran ddarllen y Beibl, cliciwch y botwm Dewiswyd ar dop y darllenydd.    "
     public: "Cyhoeddus "
     private: "Prefat"
     draft: "Drafft"
+    friends: "Ffrindiau "
     creation form errors: "Mae’r gwall(au) canlynol yn rhwystr i chi  greu nodyn:   "
     reference field: "Cyfeiriad(au):"
     version field: "Fersiwn:"
@@ -223,7 +224,6 @@ cy:
     my badges: "Fy Mathodynnau "
     revised date: "Diweddarwyd ddiwethaf ar %{date}"
     update email copy: "Mewngofnodwch gyfeiriad ebost newydd a chliciwch Diweddaru Ebost . Danfonwn ddolen  i gadarnhau'ch cyfeiriad ebost newydd. "
-    edit email: "Diweddaru’r Cyfeiriad Ebost"
     update email check: "Ewch i’ch cyfrif ebost, cliciwch y ddolen i gadarnhau'ch cyfeiriad ebost newydd."
     confirm update email success: "Diolch! Diweddarwyd eich cyfeiriad ebost."
     confirm update email error: "Mae’n flin gennym, cawsom drafferth i gwblhau newid manylion  eich ebost."
@@ -398,6 +398,10 @@ cy:
     none me: "Dwyt ti{username} heb ennill yr un bathodyn eto."
     none user: "Dydy %{username}heb ennill yr un bathodyn eto."
   plans:
+    settings: "Gosodiadau "
+    privacy:
+      private: "Prefat"
+      public: "Cyhoeddus "
     title: "Cynlluniau Darllen"
     browse by category: "Chwiliwch yn ôl Categori "
     browse plans: "Pori %{category}Cynlluniau "
@@ -427,7 +431,6 @@ cy:
     you have no plans: "Does dim tanysgrifiad gennych i gynlluniau darllen ar hyn o bryd. "
     no public plans: "Does dim cynlluniau darllen ar gyfer %{username}"
     filter by lang: "Hidlwch Gynlluniau Darllen yn ôl Iaith "
-    settings: "Gosodiadau "
     search: "Chwilio"
     search placeholder: "Chwiliwch Gynlluniau%{category}"
     subscribe to plan: "Dechreuwch y Cynllun"
@@ -509,7 +512,6 @@ cy:
     delete error: "Mae’n flin gennym, r’yn ni’n methu dileu’r uwcholeuo."
   searching:
     bible: "Beibl"
-    plans: "Cynlluniau Darllen "
     users: "Defnyddwyr"
     notes: "Nodiadau "
     total results: "Am %{total} Canlyniadau "
@@ -628,3 +630,7 @@ cy:
   versions:
     learn more: "Dysgwch Fwy "
     publisher widget title: "Cyhoeddwr "
+  ui:
+    pagination:
+      next page: "Y Dudalen Nesaf"
+      previous page: "Y Dudalen Flaenorol "
