--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -34,6 +34,7 @@ sk:
     users username required: "Musíte zadať prihlasovacie meno."
     users first name required: "Musíte zadať meno."
     users last name required: "Musíte zadať priezvisko."
+    moments content required: "Obsah nemôže byť prázdny."
   meta:
     kids_app:
       title: "Aplikácia Biblia pre deti"
@@ -47,8 +48,6 @@ sk:
     connections:
       index:
         title: "Prepojené účty"
-  ui:
-    loading indicator text: "Načítavanie..."
   now: "Teraz"
   celebrating 50MM: "Oslavujeme 50 miliónov inštalacií našej aplikácie!"
   link: "Odkaz"
@@ -141,11 +140,9 @@ sk:
   live: "Live/Skupiny"
   first page: "Prvá strana"
   last page: "Posledná strana"
-  next page: "Ďalšia strana"
-  previous page: "Predošlá strana"
   invalid username or password: "Nesprávne prihlasovacie meno alebo heslo."
   show all bookmarks: "Zobraziť všetky záložky (%{total})"
-  show all notes: "Zobraziť všetky poznámky (%{total})"
+  show all notes: "Zobraziť všetky poznámky"
   recent bookmarks: "Nedávne záložky"
   percentage display: "%{number}%"
   myself: "Ja"
@@ -172,7 +169,9 @@ sk:
       go to scripture: "Prejsť na Písmo"
       load more: "Načítať viac"
       like: "Páči sa mi to"
+      liked: "Páči sa mi"
       like title: "Páči sa mi to"
+      last comment: "Posledný komentár"
       share: "Zdieľať"
       share title: "Zdieľať s priateľmi alebo rodinou"
       comment: "Pridať komentár"
@@ -191,10 +190,18 @@ sk:
     none: "Nemáte žiadne notifikácie"
     no new: "Žiadne nové notifikácie"
     view all: "Zobraziť všetky notifikácie"
+  likes:
+    create success: "Podarilo sa! Vaše označenie páči sa mi to bolo uložené."
+    create failure: "Vaše označenie páči sa mi to sa nepodarilo uložiť"
+    destroy success: "Označenie páči sa mi to bolo vymazané"
+    destroy failure: "Vaše označenie páči sa mi to sa nepodarilo vymazať"
   comments:
+    view all N: "Zobraziť všetky komentáre: %{count}"
     post comment: "Pridať komentár"
-    create success: "Komentár pridaný"
+    create success: "Podarilo sa! Váš komentár bol zverejnený"
     create failure: "Komentár sa nepodarilo pridať"
+    destroy success: "Komentár bol vymazaný"
+    destroy failure: "Komentár sa nepodarilo vymazať"
     form:
       save button: "Odoslať"
   friends:
@@ -208,7 +215,7 @@ sk:
   friendships:
     offer success: "Žiadosť o priateľstvo odoslaná"
     offer failure: "Nepodarilo sa odoslať žiadosť o priateľstvo"
-    create success: "Odteraz ste priatelia"
+    create success: "Podarilo sa! Odteraz ste priatelia."
     create failure: "Nepodarilo sa vytvoriť priateľstvo"
     destroy success: "Žiadosť zamietnutá"
     destroy failure: "Nepodarilo sa zamietnuť žiadosť"
@@ -241,6 +248,11 @@ sk:
       reference field: "Súradnice:"
       status field: "Stav:"
       save button: "Uložiť"
+    status:
+      private: "Súkromné"
+      public: "Verejné"
+      friends: "Iba priatelia"
+      draft: "Návrh"
     list title: "Poznámky"
     loading community: "Načítavajú sa komunitné poznámky..."
     no community notes: "Nenašli sa žiadne komunitné poznámky odkazujúce na označené verše. Ak chcete vytvoriť poznámku, označte verš v Biblii a kliknite na tlačítko Označené na vrchu stránky."
@@ -248,6 +260,7 @@ sk:
     private: "Súkromná"
     is private: "Požadovaná poznámka je súkromná."
     draft: "Návrh"
+    friends: "Priatelia"
     creation form errors: "Nasledujúce chyby zabránili vytvoreniu vašej poznámky:"
     reference field: "Súradnice:"
     version field: "Preklad:"
@@ -268,7 +281,7 @@ sk:
     cancel: "Zrušiť"
     pop out: "Otvoriť samostatne"
     none found: "Nenašli sa žiadne poznámky..."
-    create success: "Poznámka uložená"
+    create success: "Podarilo sa! Vaša poznámka bola uložená."
     create failure: "Nepodarilo sa uložiť poznámku"
     destroy success: "Poznámka odstránená"
     destroy failure: "Poznámku sa nepodarilo odstrániť"
@@ -347,7 +360,7 @@ sk:
     my badges: "Moje odznaky"
     revised date: "Naposledy upravené: %{date}"
     update email copy: "Zadajte novú emailovú adresu a kliknite na Zmeniť email. Následne vám pošleme odkaz na potvrdenie vašej novej adresy,"
-    edit email: "Aktualizovať email"
+    edit email: "Zmeniť emailovú adresu"
     update email check: "Prosím skontrolujte si email a kliknite na zaslaný odkaz, čím potvrdíte vašu novú emailovú adresu."
     confirm update email success: "Vďaka! Zmenili ste svoju emailovú adresu."
     confirm update email error: "Prepáčte, nepodarilo sa zmeniť vašu emailovú adresu."
@@ -500,6 +513,7 @@ sk:
       friendships: "Upozorniť ma o žiadostiach o priateľstvo"
       moments: "Upozorniť ma o aktivite mojich priateľov"
       comments: "Upozorniť ma o komentároch pri mojej aktivite"
+      likes: "Upozorniť ma na označenia páči sa mi to na moju aktivitu"
   bookmarks:
     new: "Nová záložka"
     edit: "Upraviť"
@@ -513,7 +527,7 @@ sk:
     not found: "Záložky vám poskytujú prehľad o vašich obľúbených pasážach, alebo o poslednej kapitole, ktorú ste z danej knihy prečítali. Záložku môžete pridať tak, že označíte verš v Biblii a kliknete na tlačítko Označené na vrchu stránky."
     other user not found: "Používateľ %{username} zatiaľ nevytvoril žiadne záložky."
     creation form errors: "Nasledujúce chyby zabránili vytvoreniu záložky:"
-    create success: "Záložka uložená"
+    create success: "Podarilo sa! Vaša záložka bola uložená."
     destroy success: "Záložka odstránená"
     destroy failure: "Nepodarilo sa odstrániť záložku"
     update success: "Záložka aktualizovaná"
@@ -545,6 +559,11 @@ sk:
     none me: "Zatiaľ ste nezískali žiadne odznaky."
     none user: "Používateľ %{username} zatiaľ nezískal žiadne odznaky."
   plans:
+    settings: "Nastavenia"
+    privacy:
+      visible to friends?: "Chcete, aby vaša aktivita vrámci tohto plánu bola viditeľná pre vašich priateľov?"
+      private: "Súkromné"
+      public: "Verejné"
     title: "Plány čítania"
     browse by category: "Prehľadávať podľa kategórie"
     browse plans: "Prehľadávať plány: %{category}"
@@ -575,7 +594,6 @@ sk:
     no public plans: "Pre používateľa %{username} nie sú viditeľné žiadne plány čítania."
     filter by lang: "Filtrovať plány podľa jazyka"
     plan settings: "Nastavenia plánu"
-    settings: "Nastavenia"
     search: "Hľadať"
     search placeholder: "Hľadať plány z kategórie %{category}"
     subscribe to plan: "Začať tento plán"
@@ -688,25 +706,29 @@ sk:
     chapter only: "Prepáčte, audio funkcia nie je dostupná pre jednotlivé verše. Začnite čítať kapitolu, kde vám bude následne ponúknutá audio ikona."
     close player menu: "Zatvoriť"
   highlights:
+    title: "Zvýraznenia"
     blank slate:
       heading: "Zvýrazniť významné verše"
       description: "Pri čítaní Biblie môžete označiť verš a zvýrazniť si ho. Na tomto mieste môžete potom zvýraznenie zobraziť, upraviť, alebo odstrániť."
     none user: "Používateľ %{username} nemá žiadne zvýraznenia"
     choose color: "Vyberte farbu"
-    create success: "Zvýraznenie uložené"
+    create success: "Podarilo sa! Vaše zvýraznenie bolo uložené."
     create failure: "Nepodarilo sa uložiť zvýraznenie"
     destroy success: "Zvýraznenie odstránené"
     destroy failure: "Nepodarilo sa odstrániť zvýraznenie"
     creation error: "Prepáčte, nepodarilo sa zvýrazniť."
     delete error: "Prepáčte, nepodarilo sa odstrániť zvýraznenie."
+    form:
+      save button: "Uložiť zvýraznenie"
   searching:
     bible: "Biblia"
-    plans: "Plány čítania"
+    plans: "Plány"
     users: "Používatelia"
     notes: "Poznámky"
     total results: "Približne %{total} výsledkov"
     suggestion html: "Mysleli ste %{suggestion_link}?"
     all versions: "Všetky preklady v jazyku %{language_name}"
+    results for: "Výsledky vyhľadávania pre:"
   donate:
     donate now: "Prispejte teraz"
     donate now intl: "Prispejte z ostatných krajín"
@@ -876,9 +898,6 @@ sk:
     public domain: "Voľne dostupné"
     loading: "Načítava sa viac prekladov..."
     load error: "Prepáčte, nepodarilo sa načítať viac prekladov. Zavrite toto menu a otvorte ho znova."
-  reader help:
-    title: "Zvoľte si verš..."
-    line 1: "Kliknutím alebo ťuknutím na verš alebo skupinu veršov môžete pridať záložku, zvýraznenie, vytvoriť poznámku, alebo zdieľať zvolený obsah s vašimi priateľmi!"
   campaigns:
     100m:
       logo: "YouVersion: Aplikácia Biblia"
@@ -908,3 +927,9 @@ sk:
       sidebar:
         tagline: "Poďme spolu tvoriť dejiny"
         button: "Zdieľajte aplikáciu Biblia"
+  ui:
+    pagination:
+      next page: "Ďalšia strana"
+      previous page: "Predošlá strana"
+    datetime:
+      just now: "práve teraz"
