--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -34,6 +34,7 @@ zh-TW:
     users username required: "您必須鍵入用戶名。"
     users first name required: "您必須鍵入一個名字。"
     users last name required: "您必須鍵入一個姓氏。"
+    moments content required: "内容不能留白。"
   meta:
     kids_app:
       title: "兒童聖經軟體"
@@ -47,8 +48,6 @@ zh-TW:
     connections:
       index:
         title: "已連接的帳戶"
-  ui:
-    loading indicator text: "載入中..."
   now: "現在"
   celebrating 50MM: "慶祝5000萬次的安裝！"
   link: "鏈結"
@@ -67,7 +66,7 @@ zh-TW:
   new note: "創建新筆記"
   share success: "您的信息已經成功分享了。"
   share error: "抱歉，信息分享出錯。請重試。"
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: "連接至您的 %{connection} 帳戶"
   deleted connection: "已成功地移除與 %{connection} 服務的連接。"
   deleted connection error: "抱歉，在移除與 %{connection} 服務的連接時發生錯誤。"
@@ -141,11 +140,9 @@ zh-TW:
   live: "現場活動/群組"
   first page: "第一頁"
   last page: "最後一頁"
-  next page: "下一頁"
-  previous page: "上一頁"
   invalid username or password: "無效的用戶名或密碼。"
   show all bookmarks: "顯示全部 %{total} 書籤"
-  show all notes: "顯示全部 %{total} 筆記"
+  show all notes: "查看所有筆記"
   recent bookmarks: "最近的書籤"
   percentage display: "%{number}%"
   myself: "本人"
@@ -172,7 +169,9 @@ zh-TW:
       go to scripture: "進入經文"
       load more: "載入更多"
       like: "讚"
+      liked: "已喜歡"
       like title: "讚這個"
+      last comment: "最近的評論"
       share: "分享"
       share title: "與朋友或家人分享這個"
       comment: "評論"
@@ -191,10 +190,18 @@ zh-TW:
     none: "您沒有任何通知"
     no new: "沒有新通知"
     view all: "查看所有通知"
+  likes:
+    create success: "成了！您的點讚已經儲存。"
+    create failure: "您的讚不能被保存"
+    destroy success: "讚已被刪除"
+    destroy failure: "您的讚不能被刪除"
   comments:
+    view all N: "查看所有 %{count} 評語"
     post comment: "張貼評語"
-    create success: "評語已張貼"
+    create success: "成了！您的評論已經發佈。"
     create failure: "不能張貼評語"
+    destroy success: "評語已被刪除"
+    destroy failure: "評語不能被刪除"
     form:
       save button: "發佈"
   friends:
@@ -208,7 +215,7 @@ zh-TW:
   friendships:
     offer success: "朋友請求已發送"
     offer failure: "發送朋友請求時出錯誤"
-    create success: "你們現在是朋友了"
+    create success: "成了！你們現在是朋友了。"
     create failure: "建立友情連接時出錯誤"
     destroy success: "邀請被拒絕"
     destroy failure: "推拒請求時出錯誤"
@@ -241,6 +248,11 @@ zh-TW:
       reference field: "經節："
       status field: "狀態:"
       save button: "儲存"
+    status:
+      private: "保密"
+      public: "公開"
+      friends: "朋友而已"
+      draft: "草稿"
     list title: "筆記"
     loading community: "正在加載社群筆記..."
     no community notes: "未找到任何有參考經文的社群筆記。要建立筆記，請在聖經閱讀器裡選擇一個經節，然後在頂部點選【選中的】按鈕。"
@@ -248,6 +260,7 @@ zh-TW:
     private: "保密"
     is private: "您想要訪問的筆記已被保護。"
     draft: "草稿"
+    friends: "朋友"
     creation form errors: "以下錯誤使您無法建立筆記："
     reference field: "經節："
     version field: "版本："
@@ -268,7 +281,7 @@ zh-TW:
     cancel: "取消"
     pop out: "跳出"
     none found: "找不到筆記...."
-    create success: "已保存的筆記"
+    create success: "成了！您的筆記已經儲存。"
     create failure: "保存筆記時出錯誤"
     destroy success: "筆記已刪除"
     destroy failure: "刪除筆記時出錯誤"
@@ -347,7 +360,7 @@ zh-TW:
     my badges: "我的徽章"
     revised date: "最後一次修改於%{date}"
     update email copy: "輸入一個新的電子郵件地址並點選【更新電郵】，我們將發送一個鏈結給您來確認您的新電子郵件地址。"
-    edit email: "更新電郵"
+    edit email: "更換電子郵箱"
     update email check: "請查看您的電子郵件信箱並點選鏈結來確認您的新電子郵件地址。"
     confirm update email success: "謝謝！您已經成功更新了你的電郵地址。"
     confirm update email error: "抱歉，無法更改您的電子郵件地址。"
@@ -500,6 +513,7 @@ zh-TW:
       friendships: "有朋友請求時通知我"
       moments: "通知我朋友的活動"
       comments: "我的活動有評語時通知我"
+      likes: "我的活動有點讚時通知我"
   bookmarks:
     new: "新書籤"
     edit: "編輯"
@@ -513,7 +527,7 @@ zh-TW:
     not found: "書籤給您快速的參照並指引到您喜歡的文章，或者您上一次在某一書卷裡讀到的章節。要添加書籤，請在聖經閱讀器裡選擇經文，然後在上方點選【已選擇】按鈕。"
     other user not found: "%{username} 尚未儲存任何書籤。"
     creation form errors: "下列錯誤妨礙了您建立書籤："
-    create success: "保存讀經書籤"
+    create success: "成了！您的書籤已經儲存。"
     destroy success: "書籤已刪除"
     destroy failure: "刪除書籤時出錯誤"
     update success: "書籤已更新"
@@ -545,6 +559,11 @@ zh-TW:
     none me: "您還未獲得任何徽章。"
     none user: "%{username}還未獲得任何徽章。"
   plans:
+    settings: "設定"
+    privacy:
+      visible to friends?: "您是否願意讓朋友看到您的讀經計劃的活動？"
+      private: "保密"
+      public: "公開"
     title: "讀經計劃"
     browse by category: "分目錄瀏覽"
     browse plans: "瀏覽 %{category} 計劃"
@@ -575,7 +594,6 @@ zh-TW:
     no public plans: "%{username} 沒有公開的讀經計劃。"
     filter by lang: "用語言篩選計劃"
     plan settings: "讀經計劃設定"
-    settings: "設定"
     search: "搜尋"
     search placeholder: "搜尋 %{category} 計劃"
     subscribe to plan: "開始此計劃"
@@ -688,17 +706,20 @@ zh-TW:
     chapter only: "抱歉，經節不支持語音功能。請在閱讀器裡查看章節的語音功能。"
     close player menu: "關閉"
   highlights:
+    title: "醒目顯示："
     blank slate:
       heading: "醒目顯示有意義的經節"
       description: "當閱讀聖經時，選擇一段經節並加以醒目顯示。回到這裡來閱讀，編輯或刪除您的醒目顯示。"
     none user: "%{username} 沒有醒目顯示"
     choose color: "選擇顏色"
-    create success: "醒目顯示已保存"
+    create success: "成了！您的醒目標示已經儲存"
     create failure: "保存醒目顯示時出錯誤"
     destroy success: "醒目顯示已刪除"
     destroy failure: "刪除醒目顯示時出錯誤"
     creation error: "抱歉，不能醒目顯示。"
     delete error: "抱歉！無法取消醒目顯示。"
+    form:
+      save button: "保存醒目標示"
   searching:
     bible: "聖經"
     plans: "讀經計劃"
@@ -707,6 +728,7 @@ zh-TW:
     total results: "大約 %{total}個結果"
     suggestion html: "您是指%{suggestion_link}嗎？"
     all versions: "所有%{language_name} 譯本"
+    results for: "搜尋結果"
   donate:
     donate now: "現在就捐獻"
     donate now intl: "或者國際捐贈"
@@ -876,9 +898,6 @@ zh-TW:
     public domain: "公有領域"
     loading: "載入更多譯本..."
     load error: "抱歉，載入更多譯本時發生錯誤，請關掉這個選單，再重新打開嘗試。"
-  reader help:
-    title: "選擇一節經文…"
-    line 1: "點擊任何一個或系列的經節來標記書籤、醒目顯示、創建筆記，或與朋友分享！"
   campaigns:
     100m:
       logo: "YouVersion：聖經軟體"
@@ -908,3 +927,9 @@ zh-TW:
       sidebar:
         tagline: "讓我們一同創造歷史"
         button: "分享聖經軟體"
+  ui:
+    pagination:
+      next page: "下一頁"
+      previous page: "上一頁"
+    datetime:
+      just now: "剛才"
